api/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: external-cluster-api
  name: external-cluster-api
spec:
  finalizers:
  - kubernetes
