api/k8s/deployment-api-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: external-api-1
    app.kubernetes.io/component: external-api-1
    app.kubernetes.io/instance: external-api-1
    app.kubernetes.io/name: external-api-1
    app.kubernetes.io/part-of: external-api-1
    app.openshift.io/runtime: python
  name: external-api-1
  namespace: external-cluster-api
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: external-api-1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: external-api-1
        deployment: external-api-1
    spec:
      containers:
      - image: quay.io/llevy/external-api
        imagePullPolicy: Always
        name: external-api-1
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
