api/k8s/deployment-api-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/custom-icon: ""
    app.openshift.io/route-disabled: "false"
    deployment.kubernetes.io/revision: "1"
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"external-api-2:latest","namespace":"external-cluster-api"},"fieldPath":"spec.template.spec.containers[?(@.name==\"external-api-2\")].image","paused":false}]'
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: external-api-2
    app.kubernetes.io/component: external-api-2
    app.kubernetes.io/instance: external-api-2
    app.kubernetes.io/name: external-api-2
    app.kubernetes.io/part-of: external-api-2
    app.openshift.io/runtime: python
    app.openshift.io/runtime-namespace: external-cluster-api
  name: external-api-2
  namespace: external-cluster-api
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: external-api-2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: external-api-2
        deployment: external-api-2
    spec:
      containers:
      - image: quay.io/llevy/external-api
        imagePullPolicy: Always
        name: external-api-2
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
